added users, no tests

--- a/app/views/portals/_form.html.erb
+++ b/app/views/portals/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @portal do |f|%>
   <fieldset>
+    <%= f.hidden_field :user_id, :value => current_user['id'] %>
     <%= f.label :name %>
     <%= f.text_field :name %>
   </fieldset>
