--- a/app/views/metrics/_form.html.erb
+++ b/app/views/metrics/_form.html.erb
@@ -1,15 +1,18 @@
-<%= form_for @metric do |f|%>
-  <fieldset>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </fieldset>
-  <fieldset>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </fieldset>
-  <fieldset>
-    <%= f.label :snippet %>
-    <%= f.text_area :snippet %>
-  </fieldset>
-  <%= f.submit %>
-<% end %>
+<div class="new_edit_form">
+  <%= form_for @metric do |f|%>
+    <fieldset class="new_edit_form">
+      <legend class="new_edit_form"><%= @purpose %> a Metric</legend>
+      <div>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        <%= f.label :description %>
+        <%= f.text_field :description %>
+      </div>
+      <div id="snippet">
+        <%= f.label :snippet %>
+        <%= f.text_area :snippet %>
+        <%= f.submit %>
+      </div>
+    </fieldset>
+  <% end %>
+</div>
