--- a/app/views/portals/_form.html.erb
+++ b/app/views/portals/_form.html.erb
@@ -1,12 +1,11 @@
 <%= form_for @portal do |f|%>
-  <fieldset>
+  <fieldset class="new_edit_form">
+    <legend class="new_edit_form"><%= @purpose %> a Portal</legend>
     <%= f.hidden_field :user_id, :value => current_user['id'] %>
     <%= f.label :name %>
     <%= f.text_field :name %>
-  </fieldset>
-  <fieldset>
     <%= f.label :description %>
     <%= f.text_field :description %>
+    <%= f.submit %>
   </fieldset>
-  <%= f.submit %>
 <% end %>
