--- a/app/assets/stylesheets/portals.css.scss
+++ b/app/assets/stylesheets/portals.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Portals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$width: 800px;
+
+.portlet {
+  width: $width;
+}
+.title{
+  width: $width;
+  border: 1px dotted black;
+}
+.bar {
+  display: inline;
+}
+
+.metric {
+  padding-top: 10px;
+  padding-bottom: 30px;
+}
+
+
+
