--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,25 +5,35 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript">
+jQuery(document).ready(function() {
+  jQuery(".content").hide();
+  //toggle the componenet with class msg_body
+  jQuery(".heading").click(function()
+  {
+    jQuery(this).next(".content").slideToggle(500);
+  });
+});
+</script>
 </head>
 <body>
+<div align="center">
+  <% flash.each do |name, message| %>
+    <%= content_tag :div, message, :id => "flashbar" %>
+  <% end %>
 
-<% flash.each do |name, message| %>
-  <%= content_tag :div, message, :id => "flashbar" %>
-<% end %>
+  <div id="banner">
+    <h1>Dashboard</h1>
+  </div>
 
-<div id="banner">
-  <h1>Dashboard</h1>
-</div>
+  <div class="navbar">
+    <ul class="navbar">
+      <li class="navbar"> <%= link_to "Portals", portals_path %> </li>
+      <li class="navbar"> <%= link_to "Metrics", metrics_path %> </li>
+    </ul>
+  </div>
 
-<div class="navbar">
-  <ul class="navbar">
-    <li id="item"> <%= link_to "Portals", portals_path %> </li>
-    <li id="item"> <%= link_to "Metrics", metrics_path %> </li>
-  </ul>
-</div>
-
-<%= yield %>
-
+  <%= yield %>
+</div
 </body>
 </html>
