--- a/app/views/metrics/index.html.erb
+++ b/app/views/metrics/index.html.erb
@@ -4,7 +4,7 @@
   <%= render 'form' %>
 
 
-  <div id="listing">
+  <div class="listing">
     <% @out_metrics.each do |item| %>
       <div class="heading hidden" id="metric_<%= item.id%>">
         <ul class="inline">
