--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -204,7 +204,7 @@ label {
   background-repeat: no-repeat;
   cursor: pointer;
   border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
+  /*border-bottom: 1px solid #000;*/
  @include inline-list;
  ul.inline {
 float:right;
